--- a/app/src/main/res/layout/earthquake_list_item.xml
+++ b/app/src/main/res/layout/earthquake_list_item.xml
@@ -24,9 +24,14 @@
         android:id="@+id/earthquake_magnitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="@+id/date"
+        android:textSize="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="@+id/guideline"
-        tools:text="Rainy"/>
+        tools:text="8.0"
+        tools:layout_editor_absoluteX="172dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/latitude"
@@ -34,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
-        android:textSize="28dp"
+        android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintRight_toLeftOf="@+id/longitude"
         app:layout_constraintTop_toTopOf="@+id/guideline"
@@ -45,21 +50,24 @@
         android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:gravity="end"
-        android:textSize="28dp"
+        android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="@+id/guideline"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline"
-        tools:text="10\u00b0"/>
+        tools:text="10\u00b0"
+        android:layout_marginRight="20dp" />
 
     <TextView
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        android:layout_marginLeft="12dp"
         app:layout_constraintLeft_toRightOf="@+id/severity_icon"
-        tools:text="03/04/2017"/>
+        tools:text="03/04/17"
+        android:textSize="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.5" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
